--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -46,7 +46,7 @@
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(\"Pinhole_camera.png\")"
+    "Image(\"./png/Pinhole_camera1.png\")"
    ]
   },
   {
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "Image(\"Pinhole_camera2.png\")"
+    "Image(\"./png/Pinhole_camera2.png\")"
    ]
   },
   {
@@ -227,17 +227,21 @@
    "id": "4e678270",
    "metadata": {},
    "source": [
-    "$\n",
-    "% <![CDATA[\n",
-    "\\textbf{P}=\n",
+    "$$\\textbf{P}=\n",
     "\\begin{bmatrix}\n",
     "\t P_{11}&P_{12}&P_{13}&P_{14}\\\\\n",
     "     P_{21}&P_{22}&P_{23}&P_{24}\\\\\n",
     "     P_{31}&P_{32}&P_{33}&P_{34}\\\\\t\n",
     "\\end{bmatrix}\n",
     "\\label{eq:p}\n",
-    "\\tag{8} %]]>\\\\\n",
-    "$\n",
+    "\\tag{8}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "360d3bb1",
+   "metadata": {},
+   "source": [
     "とすると、"
    ]
   },
@@ -246,9 +250,7 @@
    "id": "61589749",
    "metadata": {},
    "source": [
-    "$\n",
-    "% <![CDATA[\n",
-    "\\begin{bmatrix}\n",
+    "$\\begin{bmatrix}\n",
     "\t P_{11}&P_{12}&P_{13}\\\\\n",
     "     P_{21}&P_{22}&P_{23}\\\\\n",
     "     P_{31}&P_{32}&P_{33}\\\\\n",
@@ -265,8 +267,14 @@
     "     r_{31}&r_{32}&r_{33}\\\\\n",
     "\\end{bmatrix}\n",
     "\\label{eq:p}\n",
-    "\\tag{9} %]]>\\\\\n",
-    "$\n",
+    "\\tag{9}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b1fc7dd",
+   "metadata": {},
+   "source": [
     "となる。  \n",
     "$\\textbf{K}$行列は、三角行列になっている。  \n",
     "また$\\textbf{R}$行列は回転行列であるので、直交正規行列となる。  \n",
@@ -275,14 +283,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bfd8032",
+   "id": "c2c668bb",
    "metadata": {},
    "source": [
     "カメラ行列$\\textbf{P}$がわかるとQR分解で$\\textbf{K}$及び$\\textbf{R}$が求まる。  \n",
-    "求められた$\\textbf{K}$を用いて以下の関係からtを求めることができる。\n",
-    "$\n",
-    "% <![CDATA[\n",
-    "\\begin{bmatrix}\n",
+    "求められた$\\textbf{K}$を用いて以下の関係からtを求めることができる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bfd8032",
+   "metadata": {},
+   "source": [
+    "$\\begin{bmatrix}\n",
     "\t P_{14}\\\\\n",
     "     P_{24}\\\\\n",
     "     P_{34}\\\\\n",
@@ -299,17 +312,15 @@
     "     t_3\\\\\n",
     "\\end{bmatrix}\n",
     "\\label{eq:p}\n",
-    "\\tag{10} %]]>\\\\\n",
-    "$"
+    "\\tag{10}$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3b94912c",
+   "id": "08eb572d",
    "metadata": {},
    "source": [
     "$\n",
-    "% <![CDATA[\n",
     "\\textbf{t}=\n",
     "\\textbf{k}^{-1}\n",
     "\\begin{bmatrix}\n",
@@ -318,8 +329,15 @@
     "     P_{34}\\\\\n",
     "\\end{bmatrix}\n",
     "\\label{eq:p}\n",
-    "\\tag{11} %]]>\\\\\n",
-    "$\n",
+    "\\tag{11}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b94912c",
+   "metadata": {},
+   "source": [
     "で$\\textbf{t}$が求まる。"
    ]
   },
