--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -224,17 +224,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ed48610",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "% <![CDATA[\n",
+    "\\textbf{P}=\\textbf{K}\\big[\\textbf{R}\\quad \\textbf{t}\\big]=\n",
+    "\t \\begin{bmatrix}\n",
+    "\t f_x&0&p_x\\\\0&f_y&p_y\\\\0&0&1\\\\\t\t\n",
+    "\t \\end{bmatrix}\n",
+    "\t \\begin{bmatrix}\n",
+    "\t \t r_1&r_2&r_3&t_1\\\\r_4&r_5&r_6&t_2\\\\r_7&r_8&r_8&t_3\\\\\t\t\n",
+    "\t \\end{bmatrix}\n",
+    "\t \\label{eq:p}\n",
+    "   \\tag{7} %]]>\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e678270",
    "metadata": {},
    "source": [
-    "$$\\textbf{P}=\n",
+    "$\\textbf{P}=\n",
     "\\begin{bmatrix}\n",
     "\t P_{11}&P_{12}&P_{13}&P_{14}\\\\\n",
     "     P_{21}&P_{22}&P_{23}&P_{24}\\\\\n",
     "     P_{31}&P_{32}&P_{33}&P_{34}\\\\\t\n",
     "\\end{bmatrix}\n",
     "\\label{eq:p}\n",
-    "\\tag{8}$$"
+    "\\tag{8}$"
    ]
   },
   {
