--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -218,27 +218,15 @@
    "id": "28045b4a",
    "metadata": {},
    "source": [
-    "## 2. QR分解<sup> 3) 4)\n",
-    "### カメラ行列Pからキャリブレーション行列K、回転行列R、並進ベクトルtを求める方法"
+    "## 2. QR分解<sup> 3) 4) "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6ed48610",
+   "id": "d80a5b29",
    "metadata": {},
    "source": [
-    "$\n",
-    "% <![CDATA[\n",
-    "\\textbf{P}=\\textbf{K}\\big[\\textbf{R}\\quad \\textbf{t}\\big]=\n",
-    "\t \\begin{bmatrix}\n",
-    "\t f_x&0&p_x\\\\0&f_y&p_y\\\\0&0&1\\\\\t\t\n",
-    "\t \\end{bmatrix}\n",
-    "\t \\begin{bmatrix}\n",
-    "\t \t r_1&r_2&r_3&t_1\\\\r_4&r_5&r_6&t_2\\\\r_7&r_8&r_8&t_3\\\\\t\t\n",
-    "\t \\end{bmatrix}\n",
-    "\t \\label{eq:p}\n",
-    "   \\tag{7} %]]>\n",
-    "$"
+    "### カメラ行列Pからキャリブレーション行列K、回転行列R、並進ベクトルtを求める方法"
    ]
   },
   {
@@ -252,7 +240,6 @@
     "     P_{21}&P_{22}&P_{23}&P_{24}\\\\\n",
     "     P_{31}&P_{32}&P_{33}&P_{34}\\\\\t\n",
     "\\end{bmatrix}\n",
-    "\\label{eq:p}\n",
     "\\tag{8}$"
    ]
   },
@@ -285,7 +272,6 @@
     "     r_{21}&r_{22}&r_{23}\\\\\n",
     "     r_{31}&r_{32}&r_{33}\\\\\n",
     "\\end{bmatrix}\n",
-    "\\label{eq:p}\n",
     "\\tag{9}$"
    ]
   },
@@ -306,7 +292,7 @@
    "metadata": {},
    "source": [
     "カメラ行列$\\textbf{P}$がわかるとQR分解で$\\textbf{K}$及び$\\textbf{R}$が求まる。  \n",
-    "求められた$\\textbf{K}$を用いて以下の関係からtを求めることができる。"
+    "求められた$\\textbf{K}$を用いて以下の関係から$\\textbf{t}$を求めることができる。"
    ]
   },
   {
@@ -330,7 +316,6 @@
     "     t_2\\\\\n",
     "     t_3\\\\\n",
     "\\end{bmatrix}\n",
-    "\\label{eq:p}\n",
     "\\tag{10}$"
    ]
   },
@@ -347,7 +332,6 @@
     "     P_{24}\\\\\n",
     "     P_{34}\\\\\n",
     "\\end{bmatrix}\n",
-    "\\label{eq:p}\n",
     "\\tag{11}\n",
     "$"
    ]
