--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -235,11 +235,13 @@
    "metadata": {},
    "source": [
     "$\\textbf{P}=\n",
-    "\\begin{bmatrix}\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
     "\t P_{11}&P_{12}&P_{13}&P_{14}\\\\\n",
     "     P_{21}&P_{22}&P_{23}&P_{24}\\\\\n",
     "     P_{31}&P_{32}&P_{33}&P_{34}\\\\\t\n",
-    "\\end{bmatrix}\n",
+    "\\end{array}\n",
+    "\\right)\n",
     "\\tag{8}$"
    ]
   },
@@ -256,23 +258,30 @@
    "id": "61589749",
    "metadata": {},
    "source": [
-    "$\\begin{bmatrix}\n",
+    "$\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
     "\t P_{11}&P_{12}&P_{13}\\\\\n",
     "     P_{21}&P_{22}&P_{23}\\\\\n",
     "     P_{31}&P_{32}&P_{33}\\\\\n",
-    "\\end{bmatrix}\n",
-    "=\n",
-    "\\begin{bmatrix}\n",
+    "\\end{array}\n",
+    "\\right)=\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
     "\t f_x&0&P_x\\\\\n",
     "     0&f_y&P_y\\\\\n",
     "     0&0&P_1\\\\\n",
-    "\\end{bmatrix}\n",
-    "\\begin{bmatrix}\n",
+    "\\end{array}\n",
+    "\\right)\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
     "\t r_{11}&r_{12}&r_{13}\\\\\n",
     "     r_{21}&r_{22}&r_{23}\\\\\n",
     "     r_{31}&r_{32}&r_{33}\\\\\n",
-    "\\end{bmatrix}\n",
-    "\\tag{9}$"
+    "\\end{array}\n",
+    "\\right)\n",
+    "\\tag{9}\n",
+    "$"
    ]
   },
   {
@@ -300,23 +309,31 @@
    "id": "2bfd8032",
    "metadata": {},
    "source": [
-    "$\\begin{bmatrix}\n",
+    "$\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
     "\t P_{14}\\\\\n",
     "     P_{24}\\\\\n",
     "     P_{34}\\\\\n",
-    "\\end{bmatrix}\n",
+    "\\end{array}\n",
+    "\\right)\n",
     "=\n",
-    "\\begin{bmatrix}\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
     "\t f_x&0&P_x\\\\\n",
     "     0&f_y&P_y\\\\\n",
     "     0&0&P_1\\\\\n",
-    "\\end{bmatrix}\n",
-    "\\begin{bmatrix}\n",
+    "\\end{array}\n",
+    "\\right)\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
     "\t t_1\\\\\n",
     "     t_2\\\\\n",
     "     t_3\\\\\n",
-    "\\end{bmatrix}\n",
-    "\\tag{10}$"
+    "\\end{array}\n",
+    "\\right)\n",
+    "\\tag{10}\n",
+    "$"
    ]
   },
   {
@@ -327,11 +344,13 @@
     "$\n",
     "\\textbf{t}=\n",
     "\\textbf{k}^{-1}\n",
-    "\\begin{bmatrix}\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
     "\t P_{14}\\\\\n",
     "     P_{24}\\\\\n",
     "     P_{34}\\\\\n",
-    "\\end{bmatrix}\n",
+    "\\end{array}\n",
+    "\\right)\n",
     "\\tag{11}\n",
     "$"
    ]
