--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -185,7 +185,7 @@
     "\t \t r_1&r_2&r_3&t_1\\\\r_4&r_5&r_6&t_2\\\\r_7&r_8&r_8&t_3\\\\\t\t\n",
     "\t \\end{bmatrix}\n",
     "\t \\label{eq:p}\n",
-    "   \\tag{7} %]]>\n",
+    "   \\tag{6} %]]>\n",
     "$"
    ]
   },
@@ -242,7 +242,7 @@
     "     P_{31}&P_{32}&P_{33}&P_{34}\\\\\t\n",
     "\\end{array}\n",
     "\\right)\n",
-    "\\tag{8}$"
+    "\\tag{7}$"
    ]
   },
   {
@@ -280,7 +280,7 @@
     "     r_{31}&r_{32}&r_{33}\\\\\n",
     "\\end{array}\n",
     "\\right)\n",
-    "\\tag{9}\n",
+    "\\tag{8}\n",
     "$"
    ]
   },
@@ -332,7 +332,7 @@
     "     t_3\\\\\n",
     "\\end{array}\n",
     "\\right)\n",
-    "\\tag{10}\n",
+    "\\tag{9}\n",
     "$"
    ]
   },
@@ -351,7 +351,7 @@
     "     P_{34}\\\\\n",
     "\\end{array}\n",
     "\\right)\n",
-    "\\tag{11}\n",
+    "\\tag{10}\n",
     "$"
    ]
   },
@@ -536,6 +536,9 @@
    "outputs": [],
    "source": [
     "u = np.array([[0,0,1]])\n",
+    "#u = np.array([[0.1,0.1,1]])\n",
+    "\n",
+    "u = u / np.linalg.norm(u)\n",
     "th = np.deg2rad(10)\n",
     "rot = cam.Rodrigues(u, th)"
    ]
