--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -719,7 +719,7 @@
    "metadata": {},
    "source": [
     "$\\textbf{K}$, $\\textbf{R_t}$はほぼ一致した。  \n",
-    "→ QR分解で$\\textbf{K}$, $\\textbf{R}$, $\\textbf{t}$を求まることができた。"
+    "→ QR分解で$\\textbf{K}$, $\\textbf{R}$, $\\textbf{t}$を求めることができた。"
    ]
   },
   {
