--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -403,7 +403,7 @@
     "class Camera(object):\n",
     "    # Pinhole Camera Class\n",
     "    def __init__(self, P):\n",
-    "        # Camera model P is initialized\n",
+    "        # Camera Matrix P is initialized\n",
     "        self.P = P\n",
     "        self.K = None # Caliblation Matrix\n",
     "        self.R = None # Rotation Matrix\n",
@@ -411,7 +411,7 @@
     "        self.c = None # Center of Camera\n",
     "        \n",
     "    def project(self, X):\n",
-    "        # pjoject the points in X normarile the coordinates\n",
+    "        # pjoject the points in X normalize the coordinates\n",
     "        x = np.dot(self.P, X)\n",
     "        for i in range(3):\n",
     "            x[i] /= x[2]\n",
