--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -23,7 +23,7 @@
    "id": "d61ac926",
    "metadata": {},
    "source": [
-    "  The following is an excerpt and some notational corrections.(see https://hedivision.github.io/Pinhole.html)"
+    "The following is an excerpt from the reference material<sup> 1) </sup>and some notation corrections.  "
    ]
   },
   {
