--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -579,7 +579,7 @@
    "id": "fa141d8a",
    "metadata": {},
    "source": [
-    "### (3) K,R,tをPから求める。"
+    "### (3) $\\textbf{K}$, $\\textbf{[R t]}$から$\\textbf{P}$を求める。"
    ]
   },
   {
@@ -643,7 +643,7 @@
    "id": "023952a7",
    "metadata": {},
    "source": [
-    "### (4) PからK,R,tを求める。"
+    "### (4) $\\textbf{P}$から$\\textbf{K}$, $\\textbf{[R t]}$を求める。"
    ]
   },
   {
