--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -708,7 +708,7 @@
    "id": "7e86ef42",
    "metadata": {},
    "source": [
-    "$\\textbf{K}$, $\\textbf{R_t}$はほぼ一致した。  \n",
+    "$\\textbf{K}$, $\\textbf{[R t]}$はほぼ一致した。  \n",
     "→ QR分解で$\\textbf{K}$, $\\textbf{R}$, $\\textbf{t}$を求めることができた。"
    ]
   },
