--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -86,7 +86,7 @@
     "\t\tf&0&0&0\\\\0&f&0&0\\\\0&0&1&0\\\\\t\t\n",
     "\t\t\\end{bmatrix}\n",
     "\t\t\\begin{bmatrix}\n",
-    "\t\tX_{cam}\\\\Y_{cam}\\\\Z_{cam}\\\\1\\\\\n",
+    "\t\tX\\\\Y\\\\Z\\\\1\\\\\n",
     "\t\t\\end{bmatrix}\n",
     "    \\label{eq:k1}\n",
     "    \\tag{2} %]]>\n",
@@ -105,10 +105,10 @@
     "\tfX+ Zp_x\\\\fY+ Zp_y\\\\~Z\\\\\t\t\n",
     "\t\\end{bmatrix}=\n",
     "\t\\begin{bmatrix}\n",
-    "\tf_x&0&p_x&0\\\\0&f_y&p_y&0\\\\0&0&1&0\\\\\t\t\n",
+    "\tf&0&p_x&0\\\\0&f&p_y&0\\\\0&0&1&0\\\\\t\t\n",
     "\t\\end{bmatrix}\n",
     "\t\\begin{bmatrix}\n",
-    "\tX_{cam}\\\\Y_{cam}\\\\Z_{cam}\\\\1\\\\\n",
+    "\tX\\\\Y\\\\Z\\\\1\\\\\n",
     "\t\\end{bmatrix}\n",
     "\t\\label{eq:k2}\n",
     "  \\tag{3} %]]>\n",
@@ -130,7 +130,34 @@
     "\t\t\\label{eq:K}\n",
     "    \\tag{4} %]]>\n",
     "$\n",
-    "where  s  is referred to as the skew parameter which is zero for most of the cameras.   $f_x$  and  $f_y$  where $\\alpha_x=f_x$ and $\\alpha_y=f_y$ represent the focal length of the camera in terms of pixel dimensions in the x-axis and the y-axis respectively, and  ($p_x$,$p_y$)  is coordinate of the principal point."
+    "where  s  is referred to as the skew parameter which is zero for most of the cameras.   $f_x$  and  $f_y$  where $\\alpha_x=fm_x$ and $\\alpha_y=fm_y$ represent the focal length of the camera in terms of pixel dimensions in the x-axis and the y-axis respectively, and  ($p_x$,$p_y$)  is coordinate of the principal point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91e3f89e",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "% <![CDATA[\n",
+    "\\lambda\n",
+    "\\begin{bmatrix}\n",
+    "\tx\\\\y\\\\1\\\\\t\t\n",
+    "\t\\end{bmatrix}=\n",
+    "\t\\begin{bmatrix}\n",
+    "\t\\alpha_x&0&p_x&0\\\\0&\\alpha_y&p_y&0\\\\0&0&1&0\\\\\t\t\n",
+    "\t\\end{bmatrix}\n",
+    "\t\\begin{bmatrix}\n",
+    "\tX\\\\Y\\\\Z\\\\1\\\\\n",
+    "\t\\end{bmatrix}\n",
+    "\t\\label{eq:k2}\n",
+    "  \\tag{5} %]]>\n",
+    "$  \n",
+    "$\\textbf{x}=\\begin{bmatrix}\n",
+    "x\\\\y\\\\1\\\\\t\t\n",
+    "\\end{bmatrix}\n",
+    "\\tag{6}$  \n",
+    "を画像のピクセル座標と定義する。"
    ]
   },
   {
@@ -172,21 +199,37 @@
     "$\n",
     "\\textbf{X}_{cam}=\\big[R\\quad t\\big]\\textbf{X}\n",
     "\t \\label{eq:world2cam}\n",
-    "    \\tag{5}\n",
+    "    \\tag{7}\n",
     "$\n",
     "So that, the general pinhole camera matrix, P, can be represented by,  \n",
     "$\n",
     "% <![CDATA[\n",
     "\\textbf{P}=\\textbf{K}\\big[\\textbf{R}\\quad \\textbf{t}\\big]=\n",
     "\t \\begin{bmatrix}\n",
-    "\t f_x&0&p_x\\\\0&f_y&p_y\\\\0&0&1\\\\\t\t\n",
+    "\t \\alpha_x&0&p_x\\\\0&\\alpha_y&p_y\\\\0&0&1\\\\\t\t\n",
     "\t \\end{bmatrix}\n",
     "\t \\begin{bmatrix}\n",
     "\t \t r_1&r_2&r_3&t_1\\\\r_4&r_5&r_6&t_2\\\\r_7&r_8&r_8&t_3\\\\\t\t\n",
     "\t \\end{bmatrix}\n",
     "\t \\label{eq:p}\n",
-    "   \\tag{6} %]]>\n",
+    "   \\tag{8} %]]>\n",
     "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c59ee36f",
+   "metadata": {},
+   "source": [
+    "よって\n",
+    "$\n",
+    "\\begin{eqnarray}\n",
+    "\\lambda \\textbf{x} = \\textbf{KRX} + \\textbf{Kt} \\\\\n",
+    "                   = \\textbf{K}\\big[\\textbf{R}\\quad \\textbf{t}\\big]\\textbf{X}\n",
+    "\\end{eqnarray}\n",
+    "\\tag{9}\n",
+    "$\n",
+    "となる。"
    ]
   },
   {
@@ -242,7 +285,7 @@
     "     P_{31}&P_{32}&P_{33}&P_{34}\\\\\t\n",
     "\\end{array}\n",
     "\\right)\n",
-    "\\tag{7}$"
+    "\\tag{10}$"
    ]
   },
   {
@@ -268,8 +311,8 @@
     "\\right)=\n",
     "\\left(\n",
     "\\begin{array}{rr}\n",
-    "\t f_x&0&P_x\\\\\n",
-    "     0&f_y&P_y\\\\\n",
+    "\t \\alpha_x&0&p_x\\\\\n",
+    "     0&\\alpha_y&p_y\\\\\n",
     "     0&0&1\\\\\n",
     "\\end{array}\n",
     "\\right)\n",
@@ -280,7 +323,7 @@
     "     r_{31}&r_{32}&r_{33}\\\\\n",
     "\\end{array}\n",
     "\\right)\n",
-    "\\tag{8}\n",
+    "\\tag{11}\n",
     "$"
    ]
   },
@@ -320,8 +363,8 @@
     "=\n",
     "\\left(\n",
     "\\begin{array}{rr}\n",
-    "\t f_x&0&P_x\\\\\n",
-    "     0&f_y&P_y\\\\\n",
+    "\t \\alpha_x&0&p_x\\\\\n",
+    "     0&\\alpha_y&p_y\\\\\n",
     "     0&0&1\\\\\n",
     "\\end{array}\n",
     "\\right)\n",
@@ -332,7 +375,7 @@
     "     t_3\\\\\n",
     "\\end{array}\n",
     "\\right)\n",
-    "\\tag{9}\n",
+    "\\tag{12}\n",
     "$"
    ]
   },
@@ -351,7 +394,7 @@
     "     P_{34}\\\\\n",
     "\\end{array}\n",
     "\\right)\n",
-    "\\tag{10}\n",
+    "\\tag{13}\n",
     "$"
    ]
   },
@@ -368,10 +411,60 @@
    "id": "c59e06c0",
    "metadata": {},
    "source": [
-    "カメラ中心$\\textbf{C}$は、$\\textbf{PC} = 0$となるため、   \n",
-    "$\\textbf{KRC} + \\textbf{Kt} = 0$より  \n",
+    "カメラ中心$\\textbf{C}$は、$\\textbf{PC} = 0$となるため、(9)式より   \n",
+    "$\\textbf{KRC} + \\textbf{Kt} = 0$となる。\n",
     "$\\textbf{C} = -\\textbf{R}^T \\textbf{t}$  \n",
     "となる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae5c54cb",
+   "metadata": {},
+   "source": [
+    "## 4. 点群からカメラ行列の推定（独自方法なので検証が必要）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "810d5253",
+   "metadata": {},
+   "source": [
+    "$ \\lambda \\textbf{x}=\\textbf{KRX} + \\textbf{Kt}$より  \n",
+    "$ \\lambda \\textbf{x}-\\textbf{Kt}=\\textbf{KRX}$となる。\n",
+    "$ \\textbf{x}^{'} =\\lambda \\textbf{x}-\\textbf{Kt}$とする。  \n",
+    "複数の点群$\\textbf{X}_1$,$\\textbf{X}_2$,$\\textbf{X}_3$,・・・,$\\textbf{X}_{n}$ \n",
+    "とすると、\n",
+    "$\\textbf{M}_X=\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
+    "\t X_{11}&X_{12}&X_{13}&&X_{1n}\\\\\n",
+    "     X_{21}&X_{22}&X_{23}&・・・・&X_{2n}\\\\\n",
+    "     X_{31}&X_{32}&X_{33}&&X_{3n}\\\\\n",
+    "\\end{array}\n",
+    "\\right)\n",
+    "\\tag{14}$  \n",
+    "とする。 \n",
+    "射影された点群$\\textbf{x}^{'}_1$,$\\textbf{x}^{'}_2$,$\\textbf{x}^{'}_3$,・・・,$\\textbf{x}^{'}_n$ \n",
+    "とすると、\n",
+    "$\\textbf{M}_{x^{'}}=\n",
+    "\\left(\n",
+    "\\begin{array}{rr}\n",
+    "\t x^{'}_{11}&x^{'}_{12}&x^{'}_{13}&&x^{'}_{1n}\\\\\n",
+    "     x^{'}_{21}&x^{'}_{22}&x^{'}_{23}&・・・・&x^{'}_{2n}\\\\\n",
+    "     x^{'}_{31}&x^{'}_{32}&x^{'}_{33}&&x^{'}_{3n}\\\\\n",
+    "\\end{array}\n",
+    "\\right)  \n",
+    "\\tag{15}$  \n",
+    "より、  \n",
+    "$\\textbf{M}_{x^{'}}= \\textbf{KR} \\textbf{M}_X\n",
+    "\\tag{16}$ \n",
+    "となる。 $\\textbf{M}_X$の疑似逆行列を$\\textbf{M}^{+}_X$とすると、\n",
+    "$\\textbf{KR}=\\textbf{M}_{x^{'}} \\textbf{M}^{+}_X\n",
+    "\\tag{17}$  \n",
+    "で$\\textbf{KR}$を求めることができる。\n",
+    "従って、$\\textbf{t}$が既知ならば$\\textbf{P}$を推定することができる。  \n",
+    "同様に疑似逆行列を用いて$\\textbf{t}$が未知の場合に$\\textbf{P}$を推定することを試みたが、うまくいかなかった。理由はわかっていない。"
    ]
   },
   {
@@ -379,7 +472,7 @@
    "id": "79a01bae",
    "metadata": {},
    "source": [
-    "## 4. テストプログラム<sup> 3)"
+    "## 5. テストプログラム<sup> 3)"
    ]
   },
   {
@@ -745,6 +838,127 @@
     "cam = Camera(P)\n",
     "\n",
     "cam.center()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0dd6edc",
+   "metadata": {},
+   "source": [
+    "### (6) 点群からカメラ行列$\\textbf{P}$の推定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "22f64d7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = np.array([[100.0,0,0],[0,100.0,0],[0,0,1.0]])\n",
+    "Rt = np.hstack((np.eye(3), np.array([[0],[0],[0]]))) # t = (0,0,0)\n",
+    "P = np.dot(K, Rt)\n",
+    "#P = np.array([[100.0,0,0,0],[0,100.0,0,0],[0,0,1.0,0]])\n",
+    "X = np.array([[[0.5],[0],[0.5],[1.0]],\n",
+    "              [[0],[1.0],[1.0],[1.0]],\n",
+    "              [[-1.5],[0],[1.5],[1.0]],\n",
+    "              [[0],[-2],[2.0],[1.0]],\n",
+    "              [[2.5],[0],[2.5],[1.0]],\n",
+    "              [[0],[3.0],[3.0],[1.0]],\n",
+    "              [[-3.5],[0],[3.5],[1.0]],\n",
+    "              [[0],[-4],[4.0],[1.0]]])\n",
+    "\n",
+    "cam = Camera(P)\n",
+    "x = cam.project(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a7e1fea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_array = X[:,:,0].T[:3,:]\n",
+    "P = P[:,:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dbf0093a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  50. ,    0. , -150. ,    0. ,  250. ,    0. , -350. ,    0. ],\n",
+       "       [   0. ,  100. ,    0. , -200. ,    0. ,  300. ,    0. , -400. ],\n",
+       "       [   0.5,    1. ,    1.5,    2. ,    2.5,    3. ,    3.5,    4. ]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_array = x[:,:,0] * X[:,2,0] # x, y をλ倍する。\n",
+    "x_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "05cd5540",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 1.00000000e+02, -2.03170814e-14,  9.15933995e-15],\n",
+       "        [ 6.77236045e-15,  1.00000000e+02,  3.59712260e-14],\n",
+       "        [ 1.38777878e-16, -5.55111512e-16,  1.00000000e+00]]),\n",
+       " array([[100.,   0.,   0.],\n",
+       "        [  0., 100.,   0.],\n",
+       "        [  0.,   0.,   1.]]))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pr = np.dot(x_array, np.linalg.pinv(X_array))\n",
+    "Pr, P # ほぼ一致した。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9b99a231",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[1., 0., 0.],\n",
+       "        [0., 1., 0.],\n",
+       "        [0., 0., 1.]]),\n",
+       " array([[ 1.00000000e+00, -2.03170814e-16,  9.15933995e-17],\n",
+       "        [ 6.77236045e-17,  1.00000000e+00,  3.59712260e-16],\n",
+       "        [ 1.38777878e-16, -5.55111512e-16,  1.00000000e+00]]))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R , Rr= np.dot(np.linalg.inv(K), P), np.dot(np.linalg.inv(K), Pr)\n",
+    "R, Rr # ほぼ一致した。"
    ]
   },
   {
