--- a/Genenal_Camera_Model.ipynb
+++ b/Genenal_Camera_Model.ipynb
@@ -139,7 +139,6 @@
    "metadata": {},
    "source": [
     "$\n",
-    "% <![CDATA[\n",
     "\\lambda\n",
     "\\begin{bmatrix}\n",
     "\tx\\\\y\\\\1\\\\\t\t\n",
@@ -150,8 +149,7 @@
     "\t\\begin{bmatrix}\n",
     "\tX\\\\Y\\\\Z\\\\1\\\\\n",
     "\t\\end{bmatrix}\n",
-    "\t\\label{eq:k2}\n",
-    "  \\tag{5} %]]>\n",
+    "  \\tag{5}\n",
     "$  \n",
     "$\\textbf{x}=\\begin{bmatrix}\n",
     "x\\\\y\\\\1\\\\\t\t\n",
